[gd_scene load_steps=9 format=3 uid="uid://idfadyrk0auf"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_uhhk1"]
[ext_resource type="FontFile" uid="uid://dwub7qum41gaq" path="res://UI/Planes_ValMore.ttf" id="2_nwwd0"]
[ext_resource type="Script" path="res://scripts/wave.gd" id="3_50t8h"]
[ext_resource type="Texture2D" uid="uid://cfhlumu376grb" path="res://UI/5 Logo/Logo.png" id="3_cfvah"]
[ext_resource type="Texture2D" uid="uid://y6govco4twv7" path="res://UI/2 Bars/Band2_off.png" id="5_t1nvj"]

[sub_resource type="LabelSettings" id="LabelSettings_drs66"]
font = ExtResource("2_nwwd0")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_u7xdt"]
font = ExtResource("2_nwwd0")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_v0hah"]
font = ExtResource("2_nwwd0")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_uhhk1")

[node name="enemiesCount" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 3.0
offset_top = 2.0
offset_right = 84.0
offset_bottom = 14.0
texture = ExtResource("5_t1nvj")

[node name="EnemiesLabel" type="Label" parent="enemiesCount"]
texture_filter = 1
layout_mode = 0
offset_top = 1.0
offset_right = 80.0
offset_bottom = 12.0
text = "ttttttttttttt"
label_settings = SubResource("LabelSettings_drs66")
horizontal_alignment = 1

[node name="CountWaveInit" type="TextureRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -165.0
offset_top = 3.0
offset_right = -7.0
offset_bottom = 16.0
grow_horizontal = 0
texture = ExtResource("5_t1nvj")

[node name="CountdownLabel" type="Label" parent="CountWaveInit"]
texture_filter = 1
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 140.0
offset_bottom = 13.0
text = "Wave starts in 15 sec"
label_settings = SubResource("LabelSettings_u7xdt")
horizontal_alignment = 1

[node name="wave" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_right = 46.0
offset_bottom = 57.0
grow_horizontal = 2
texture = ExtResource("3_cfvah")
expand_mode = 1
script = ExtResource("3_50t8h")

[node name="WaveLabel" type="Label" parent="wave"]
layout_mode = 0
offset_left = 17.0
offset_top = 32.0
offset_right = 79.0
offset_bottom = 48.0
text = "1"
label_settings = SubResource("LabelSettings_v0hah")
horizontal_alignment = 1
